testsuite/tests/patsyn/should_fail/T26465.stderr
T26465.hs:10:5: error: [GHC-39999]
    • Ambiguous type variable ‘a0’ arising from a use of ‘f’
      prevents the constraint ‘(Eq a0)’ from being solved.
      Relevant bindings include
        g :: a0 -> Maybe a0 (bound at T26465.hs:10:1)
      Probable fix: use a type annotation to specify what ‘a0’ should be.
      Potentially matching instances:
        instance Eq Ordering -- Defined in ‘GHC.Internal.Classes’
        instance Eq Integer -- Defined in ‘GHC.Internal.Bignum.Integer’
        ...plus 24 others
        ...plus five instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the expression: f
      In an equation for ‘g’: g = f

